<resources>
    <string name="app_name">Woloo</string>
    <string name="menu_home">Home</string>
    <string name="refer_friend">Refer a Friend</string>
    <string name="buy_subscription">Buy Membership</string>
    <string name="invite_friend">Invite A Friend</string>
    <string name="refer">Refer</string>
    <string name="my_account">My Account</string>
    <string name="woloo_gift_card">Woloo Gift-Card</string>
    <string name="become_a_woloo_host">Become A Woloo Host</string>
    <string name="logout">Logout</string>
    <string name="upload_image">Do you want to add Profile Image?</string>
    <string name="change_image">Do you want to change Profile Picture?</string>
    <string name="about_woloo_info">Woloo-India\'s first and only by-woman-for-woman Omni-channel(Loo-Commerce) hygiene service &amp; Product retail business that provides world class hygiene-access to woman.</string>
    <string name="about_woloo_womans_powder_room">Woloo-Womens Powder-Room, is Retail store chain for women Hygiene/Personal Care &amp; Beauty products with a set of world class (Safe &amp; Hygienic) washrooms for woman of all ages &amp; diversity for their hygiene dignity along with a cafe.</string>
    <string name="about_woloo_app_info">Woloo App enables Women customer to locate &amp; use the nearest washroom facility by purchasing the a monthly Membership of Rs. 99/- &amp; can also purchase merchandise from a uniquely curated product &amp; brand mix.</string>
    <string name="terms_and_condition">Terms &amp; Condition</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="subscription_dialog_msg">Wow! You already have a Woloo Membership. Your Membership expires on 2021-10-28</string>
    <string name="my_account_woloo_money">Woloo Money</string>
    <string name="my_account_woloo_points">Woloo Points</string>
    <string name="my_account_redeem_your_points">Redeem</string>
    <string name="profile_info_name">Name</string>
    <string name="profile_info_email">Email</string>
    <string name="profile_info_mobile_no">Mobile no</string>
    <string name="save">Save</string>
    <string name="profile_info_change_password">Change Password</string>
    <string name="add_money">Add Money</string>
    <string name="select_amount">Select the amount</string>
    <string name="gift_card_hundred">Rs. 100</string>
    <string name="gift_card_five_hundred">Rs. 500</string>
    <string name="gift_card_thousands">Rs. 1000</string>
    <string name="gift_card_rupees">\u20B9</string>
    <string name="gift_card_amount">Enter amount manually</string>
    <string name="gift_card_mobile">Receiver Mobile No.</string>
    <string name="send">Send</string>
    <string name="gift_card_how_it_works">How it works</string>
    <string name="gift_card_purchase_subscription">Purchase the Membership</string>
    <string name="gift_card_locate_sanitisation_area">Locate the sanitisation area on app</string>
    <string name="gift_card_show_code">Show the code Woloo Powder</string>
    <string name="dear_woloo_host">Dear Woloo Host.</string>
    <string name="become_host_msg">Woloo offers you a great opportunity to earn extra money &amp; also provide loads of customers if you have a Clean &amp; Hygienic washroom facility at your outlet.</string>
    <string name="yes_i_am_interested">Yes! I am interested</string>
    <string name="refer_woloo_host_msg">Refer a restaurant or retail outlet that you feel could be Woloo Host \n &amp; \n Earn up to 100 points</string>
    <string name="details_of_the_reffered_Woloo_host">Details of the referred Woloo Host</string>
    <string name="submit">Submit</string>
    <string name="wah_title">WAH [Woloo Assurance Hygiene] World\'s first Global Standard Guide &amp; Certification Initiative </string>
    <string name="wah_msg">The mission of WAH is to provide a compliance guide &amp; certificate for Woloo-Host [restaurants/QSRs &amp; other retail facilities] to improve the standard of hygiene of their toilet facilities</string>
    <string name="wah_scan_code">Scan the code on WAH sticker\n for \nExclusive offers by Woloo-Host</string>
    <string name="gobindaas">#GoBindass</string>
    <string name="clean_hygienic_toilets">Clean &amp; Hygienic Toilets</string>
    <string name="beauty_changing_room">Beauty &amp; Changing Room</string>
    <string name="safe_space">Safe Space</string>
    <string name="assisted_facility">Assisted Facility for Specially</string>
    <string name="cafe">cafe</string>
    <string name="feeding_room">Feeding Room</string>
    <string name="diaper_changing_room">Diaper Changing Facility</string>
    <string name="convinience_shop">Convenience Shop</string>
    <string name="start_free_trial_msg">Locate &amp; use clean, hygienic &amp; safe washrooms anywhere you go!</string>
    <string name="start_free_trial">Start Free Trial</string>
    <string name="no_internet_connection_">Please check your internet connection and try again</string>
    <string name="tap_to_retry">Tap to retry</string>
    <string name="lbl_exit">Exit</string>
    <string name="error_vpn_message">App has detected that you are connected to internet via a VPN, proxy, or “un-blocker” service.</string>
    <string name="slow_internet_connection_">Slow internet connection, please wait</string>
    <string name="no_result_found">No data found</string>
    <string name="welcome_woloo">Welcome to Woloo!</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_email_mobile">Enter your Mobile Number*</string>
    <string name="login_with">Login with</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="powered_by_text">Powered By Jetsynthesys</string>
    <string name="skip">SKIP</string>
    <string name="title_menu">Menu</string>
    <string name="welcome_txt">Welcome,</string>
    <string name="otp_message">Please enter the verification code below sent on your </string>
    <string name="not_you"><u>Not You?</u></string>
    <string name="did_not_receive_otp">Didn\'t receive OTP code?</string>
    <string name="underline_resend_code"><u>Resend Code</u></string>
    <string name="verify_proceed">Verify &amp; Proceed</string>
    <string name="go_bindas">#Gobindas</string>
    <string name="next">NEXT</string>
    <string name="beauty_and_changing_room">Beauty &amp; Changing Room</string>
    <string name="assisted_facility_for_abled">Assisted facility for specially abled</string>
    <string name="choose_payment">Choose Payment</string>
    <string name="card">Card</string>
    <string name="net_banking">Net Banking</string>
    <string name="upi">UPI</string>
    <string name="wallets">Wallets</string>
    <string name="peer_club">PEE\'RS CLUB</string>
    <string name="peer_club_membership">PEE\'RS CLUB MEMBERSHIP</string>
    <string name="elite">ELiTE</string>
    <string name="yearly_membership">Yearly Membership</string>
    <string name="buy_now_for_one_month_additional_subscription">Buy now and get one month of additional Membership free.</string>
    <string name="gst">GST 18%</string>
    <string name="total">Total</string>
    <string name="subscription_msg">Membership will be renewed automatically if not cancelled at least 48 hours before the next Membership cycle.</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="card_number">Card Number</string>
    <string name="month">MM</string>
    <string name="year">YY</string>
    <string name="cvv">CVV</string>
    <string name="choose_another_payment">"Choose Another Payment "</string>
    <string name="rate_your_experience">Rate your experience</string>
    <string name="tell_us_improve">Tell us where we can improve</string>
    <string name="tell_us_what_you_love">Tell us what you love</string>
    <string name="add_review">Add Review</string>
    <string name="any_other_feedback">Any other feedback</string>
    <string name="type_here">Type here..</string>
    <string name="monthly">Monthly</string>
    <string name="what_we_offer">What we Offer:</string>
    <string name="woloo_premium">Woloo Premium</string>
    <string name="notification">Notifications</string>
    <string name="inv_contacts">Invite Contacts</string>
    <string name="entermessage">Message</string>
    <string name="quarterly">Quarterly</string>
    <string name="half_yearly">Half-Yearly</string>
    <string name="yearly">YEARLY</string>
    <string name="invite_your_friend">Invite\nyour Friends</string>
    <string name="earn_profit">Earn more than 100 points after each friends’s use woloo store</string>
    <string name="invite_now">Invite Now</string>
    <string name="photos">Photos</string>
    <string name="reviwes">Reviews</string>
    <string name="share">Share</string>
    <string name="bookmark">Bookmark</string>
    <string name="or">or</string>
    <string name="giftSubscription">Gift Membership</string>
    <string name="splash_text">Locate &amp; use clean,\nhygienic &amp; safe\nwashrooms anywhere\nyou go</string>
    <string name="tag_hint_text">Search tag or select from bleow</string>
    <string name="thank_you_for_share_review">Thank you\nfor sharing your review</string>
    <string name="okay">Okay</string>
    <string name="OKAY">OKAY</string>
    <string name="congratulations">Congratulations</string>
    <string name="nearest_walk">Nearest Walks</string>
    <string name="news">News</string>
    <string name="articals">Articles</string>
    <string name="woloo_store">Woloo-Hosts near you</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="error">Error</string>
    <string name="network">Network</string>
    <string name="slow_internet_connection_header">Slow Internet Connection</string>
    <string name="moderate_bandwidth_msg">Taking longer than usual. Please wait...</string>
    <string name="cancel">Cancel</string>
    <string name="enter_points_manually">Enter points manually*</string>
    <string name="mobile_number">Receiver Mobile No.*</string>
    <string name="become_a_woloo_host_msg2">If you are a Premium Restaurant, QSR, Café, or any other retail business outlet with a safe &amp; hygienic washroom, here is an opportunity for you to attract more customers &amp; also earn extra money. All you need to do is upgrade your existing washroom as per Woloo standards &amp; be a part of our loo discovery network on Woloo app.</string>
    <string name="become_a_woloo_host_msg1">Woloo brings a tech enabled loo-discovery platform app that helps women to locate the nearest washroom, whenever they are away from their home or office.</string>
    <string name="become_a_woloo_host_msg1_new">Woloo brings a tech enabled loo-discovery app that helps women to locate the nearest washroom, whenever they are away from their home or office.

    \n\nIf you are a premium restaurant, QSR, Cafe, or any other retail business outlet with a safe and hygienic washroom, here is an opportunity for you to attract more customers and also earn extra income. All you need to do is upgrade your existing washroom as per Woloo standards &amp; be a part of our loo discovery network on the Woloo App.</string>
    <string name="open_time">Open Time: </string>
    <string name="covid_free">Covid Free</string>
    <string name="clean_and_hygiene">Clean &amp; Hygiene</string>
    <string name="name_validation">Please enter your name</string>
    <string name="address_validation">Please enter your address</string>
    <string name="city_validation">Please enter your city</string>
    <string name="zipcode_validation">Please enter your zipcode</string>
    <string name="location_validation">Please grant location service</string>
    <string name="mobile_hint">Enter your Mobile Number</string>
    <string name="login_button">Login with OTP</string>
    <string name="privacy_terms">Please read our <u>Terms &amp; Conditions</u> and our <u>Privacy Policy</u></string>
</resources>